style: :lipstick: Fix spacing in Highlight Information component
Fix spacing between subcontent and footnote for implementations of Highlight Information component in children page

--- a/src/styles/components/_highlight-information.scss
+++ b/src/styles/components/_highlight-information.scss
@@ -45,12 +45,18 @@
     }
 
     &__sub-content {
-        bottom: -5px;
+        bottom: -10px;
         color: $color-dark-gray;
         font-size: 16px;
         font-weight: 500;
         left: 0;
         line-height: 1.5rem;
         position: absolute;
+    }
+
+    &--contains-subcontent {
+        .highlight-information__footnote {
+            margin-top: .9375rem;
+        }
     }
 }
